--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <meta name="title" content="Svelte/Typescript/Tailwind/Vite">
-    <meta name="description" content="Svelte/Typescript/Tailwind/Vite template">
-
-    <title>Svelte + TS + Tailwind + Vite App</title>
+    <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
