Apply some styles via Tailwind

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-neutral-800 text-gray-100">
+    <div
+      id="app"
+      class="flex flex-col place-items-center mx-auto text-center">
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
